--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-MONGODB_URL = mongodb+srv://nasa:nasa@nasa.ef4guah.mongodb.net/users?retryWrites=true&w=majority&appName=nasa
+MONGODB_URL = mongodb+srv://user:user@users.fg4pf8j.mongodb.net/?retryWrites=true&w=majority&appName=users
 PORT = 8073
